--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,7 @@ html {
   box-sizing: border-box;
 }
 
-*
-*::before,
+* *::before,
 *::after {
   box-sizing: inherit;
 }
@@ -486,11 +485,11 @@ address {
 
 .footer-social {
   display: flex;
+  margin-top: 20px;
 }
 
 .link-position {
   margin-left: 70px;
-
 }
 /* ==========сторінка портфоліо============= */
 
@@ -554,7 +553,6 @@ address {
   display: flex;
   align-items: center;
   margin-left: auto;
-
 }
 
 /* button */
@@ -638,8 +636,8 @@ address {
   outline: 1px solid #eeeeee;
 }
 
- .link-pic:hover,
- .link-pic:focus{
+.link-pic:hover,
+.link-pic:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -654,4 +652,45 @@ address {
 .footer-auth.map {
   line-height: 24px;
   color: var(--white-color);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(47, 48, 58, 0.4);
+}
+
+.modal {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 580px;
+  background-color: var(--white-color);
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
