--- a/css/styles.css
+++ b/css/styles.css
@@ -345,7 +345,10 @@ address {
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 27px 0px;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
