--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,8 @@ address {
   letter-spacing: 0.02em;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .auth-nav .link-auth:hover,
